--- a/app/views/presentations/_form.html.haml
+++ b/app/views/presentations/_form.html.haml
@@ -12,5 +12,9 @@
   .field
     = f.label :description
     = f.text_area :description
+  .field
+    = f.label :video
+    = f.file_field :video, accept: 'video/*', class: 'ui button'
+    = f.hidden_field :video_cache
   .actions
     = f.submit 'Save'
