--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@category) do |f|
+= form_for(@category, remote: true) do |f|
   - if @category.errors.any?
     #error_explanation
       %h2
