--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,15 +1,9 @@
 %h1 Listing categories
-%table
-  %thead
-    %tr
-      %th Name
-      %th{:colspan => "3"}
-  %tbody
-    - @categories.each do |category|
-      %tr
-        %td= category.name
-        %td= link_to 'Show', category
-        %td= link_to 'Edit', edit_category_path(category)
-        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+
+%ul#categories
+  = render @categories
+
+= render 'form'
+
 %br/
 = link_to 'New Category', new_category_path
