認証・認可の機能追加

--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -3,7 +3,8 @@
 %ul#categories
   = render @categories
 
-= render 'form'
+- if can? :create, @category
+  = render 'form'
 
 %br/
 = link_to 'New Category', new_category_path
