--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,5 +1,7 @@
 %li
   = category.name
   = link_to 'Show', category
-  = link_to 'Edit', edit_category_path(category)
-  = link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+  = link_to 'Edit', edit_category_path(category) if can? :update, category
+  = link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } if can? :update, category
+
+
