--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,15 +1,5 @@
-= form_for(@category, remote: true) do |f|
-  - if @category.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@category.errors.count, "error")
-        prohibited this category from being saved:
-      %ul
-        - @category.errors.full_messages.each do |message|
-          %li= message
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name
-  .actions
-    = f.submit
+= simple_form_for @category, remote: true do |f|
+  .form-inputs
+    = f.input :name
+  .form-actions
+    = f.button :submit, "save"
