--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,19 +1,7 @@
-= form_for @event do |f|
-  - if @event.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
-      %ul
-        - @event.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :date
-    = f.date_select :date
-  .actions
-    = f.submit 'Save'
+= simple_form_for @event do |f|
+  .form-inputs
+    = f.input :title
+    = f.input :description
+    = f.input :date
+  .form-actions
+    = f.button :submit, "save"
