--- a/app/views/documents/show.html.haml
+++ b/app/views/documents/show.html.haml
@@ -8,5 +8,4 @@
   = @document.description
 
 = link_to 'Edit', edit_document_path(@document)
-\|
-= link_to 'Back', documents_path
+= link_to 'Back', presentation_path(@document.presentation)
