--- a/app/views/presentations/edit.html.haml
+++ b/app/views/presentations/edit.html.haml
@@ -3,5 +3,4 @@
 = render 'form'
 
 = link_to 'Show', @presentation
-\|
-= link_to 'Back', presentations_path
+= link_to 'Back', event_path(@presentation.event)
