--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -1,16 +1,7 @@
-= form_for @document do |f|
-  - if @document.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@document.errors.count, "error")} prohibited this document from being saved:"
-      %ul
-        - @document.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_area :description
-  .actions
-    = f.submit 'Save'
+= simple_form_for shallow_args(@document.presentation, @document) do |f|
+  .form-inputs
+    = f.input :presentation_id, as: :hidden
+    = f.input :title
+    = f.input :description
+  .form-actions
+    = f.button :submit, "save"
