--- a/app/views/presentations/_form.html.haml
+++ b/app/views/presentations/_form.html.haml
@@ -1,20 +1,9 @@
-= form_for @presentation do |f|
-  - if @presentation.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@presentation.errors.count, "error")} prohibited this presentation from being saved:"
-      %ul
-        - @presentation.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :video
-    = f.file_field :video, accept: 'video/*', class: 'ui button'
-    = f.hidden_field :video_cache
-  .actions
-    = f.submit 'Save'
+= simple_form_for shallow_args(@presentation.event, @presentation) do |f|
+  .form-inputs
+    = f.input :event_id, as: :hidden
+    = f.association :category
+    = f.input :title
+    = f.input :description
+    = f.input :video
+  .form-actions
+    = f.button :submit, "save"
